@@ -7,6 +7,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -15,6 +16,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -33,7 +35,14 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             try {
                 Claims claims = jwtService.parse(token);
                 String username = claims.getSubject();
-                UserDetails principal = User.withUsername(username).password("").authorities(Collections.emptyList()).build();
+                String role = claims.get("role", String.class);
+                List<SimpleGrantedAuthority> authorities;
+                if (role != null) {
+                    authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+                } else {
+                    authorities = Collections.emptyList();
+                }
+                UserDetails principal = User.withUsername(username).password("").authorities(authorities).build();
                 UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(principal, null, principal.getAuthorities());
                 SecurityContextHolder.getContext().setAuthentication(auth);
             } catch (Exception ignored) {
